feat: Add platform disclaimer modal and update legal compliance
- Added PlatformDisclaimer modal component with translations
- Updated Hero section with disclaimer trigger
- Enhanced ExpertsSection with legal compliance
- Updated practitioner agreement and terms across all locales
- Added fix documentation for legal compliance updates

--- a/content/practitioner-agreement/br.mdx
+++ b/content/practitioner-agreement/br.mdx
@@ -322,7 +322,7 @@ Você reconhece que:
 Você deve:
 
 - ✅ Informar os pacientes de que a plataforma não é para emergências
-- ✅ Fornecer informações de contato de emergência (192 no Brasil, 112 na UE, 911 nos EUA)
+- ✅ Fornecer informações de contato de emergência (Brasil: 192/193, UE: 112, EUA: 911)
 - ✅ Estabelecer protocolos de emergência com os pacientes
 - ✅ NÃO usar a plataforma para situações urgentes ou que ameacem a vida
 
