--- a/content/practitioner-agreement/en.mdx
+++ b/content/practitioner-agreement/en.mdx
@@ -322,7 +322,7 @@ You acknowledge that:
 You must:
 
 - ✅ Inform patients that platform is not for emergencies
-- ✅ Provide emergency contact information (112 in EU, 911 in US)
+- ✅ Provide emergency contact information (EU: 112, USA: 911)
 - ✅ Establish emergency protocols with patients
 - ✅ NOT use platform for urgent or life-threatening situations
 
