--- a/content/practitioner-agreement/es.mdx
+++ b/content/practitioner-agreement/es.mdx
@@ -322,7 +322,7 @@ Usted reconoce que:
 Debe:
 
 - ✅ Informar a los pacientes que la plataforma no es para emergencias
-- ✅ Proporcionar información de contacto de emergencia (112 en la UE, 911 en EE.UU.)
+- ✅ Proporcionar información de contacto de emergencia (UE: 112, EE.UU.: 911)
 - ✅ Establecer protocolos de emergencia con los pacientes
 - ✅ NO usar la plataforma para situaciones urgentes o que amenacen la vida
 
