--- a/content/practitioner-agreement/pt.mdx
+++ b/content/practitioner-agreement/pt.mdx
@@ -322,7 +322,7 @@ Você reconhece que:
 Você deve:
 
 - ✅ Informar os pacientes de que a plataforma não é para emergências
-- ✅ Fornecer informações de contacto de emergência (112 na UE, 911 nos EUA)
+- ✅ Fornecer informações de contacto de emergência (UE: 112, EUA: 911)
 - ✅ Estabelecer protocolos de emergência com os pacientes
 - ✅ NÃO usar a plataforma para situações urgentes ou que ameacem a vida
 
