--- a/content/terms/en.mdx
+++ b/content/terms/en.mdx
@@ -149,9 +149,8 @@ To the fullest extent permitted by law, Eleva.care is liable only for the perfor
 
 **Eleva.care is NOT for medical emergencies.** If you are experiencing a medical emergency:
 
-- **In Portugal**: Call 112
-- **In EU countries**: Call 112
-- **In USA**: Call 911
+- **EU**: Call 112
+- **USA**: Call 911
 - Or contact your local emergency services immediately
 
 Do not use our platform for urgent or emergency medical situations.
