--- a/content/terms/es.mdx
+++ b/content/terms/es.mdx
@@ -149,9 +149,8 @@ En la máxima medida permitida por la ley, Eleva.care es responsable solo del re
 
 **Eleva.care NO es para emergencias médicas.** Si experimenta una emergencia médica:
 
-- **En Portugal**: Llame al 112
-- **En países de la UE**: Llame al 112
-- **En EE.UU.**: Llame al 911
+- **UE**: Llame al 112
+- **EE.UU.**: Llame al 911
 - O contacte inmediatamente a sus servicios de emergencia locales
 
 No utilice nuestra plataforma para situaciones médicas urgentes o de emergencia.
