--- a/content/terms/pt.mdx
+++ b/content/terms/pt.mdx
@@ -149,9 +149,8 @@ Na máxima extensão permitida por lei, a Eleva.care é responsável apenas pelo
 
 **A Eleva.care NÃO é para emergências médicas.** Se estiver a vivenciar uma emergência médica:
 
-- **Em Portugal**: Ligue 112
-- **Em países da UE**: Ligue 112
-- **Nos EUA**: Ligue 911
+- **UE**: Ligue 112
+- **EUA**: Ligue 911
 - Ou contacte imediatamente os seus serviços de emergência locais
 
 Não utilize a nossa plataforma para situações médicas urgentes ou de emergência.
