--- a/content/terms/br.mdx
+++ b/content/terms/br.mdx
@@ -149,10 +149,9 @@ Na máxima extensão permitida por lei, a Eleva.care é responsável apenas pelo
 
 **A Eleva.care NÃO é para emergências médicas.** Se estiver vivenciando uma emergência médica:
 
-- **No Brasil**: Ligue 192 (SAMU) ou 193 (Bombeiros)
-- **Em Portugal**: Ligue 112
-- **Em países da UE**: Ligue 112
-- **Nos EUA**: Ligue 911
+- **Brasil**: Ligue 192 (SAMU) ou 193 (Bombeiros)
+- **UE**: Ligue 112
+- **EUA**: Ligue 911
 - Ou contate imediatamente seus serviços de emergência locais
 
 Não utilize nossa plataforma para situações médicas urgentes ou de emergência.
